examples/test/testpolicy2554.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy2554
  namespace: namespace426
spec:
  podSelector:
    matchLabels:
      key8: value43
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key27: value22
          key17: value2
          key24: value3
      podSelector:
        matchLabels:
          key43: value11
          key29: value48
          key39: value23
